force-app/main/default/objects/Impact_2023_Session__c/Impact_2023_Session__c.object-meta.xml
<CustomObject>
    <description>A junction between session types and sessions looking up to the conference attendee.</description>
    <label>Impact 2023 Session</label>
    <nameField>
        <label>Impact 2023 Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact 2023 Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>