force-app/main/default/objects/Impact_2023_Session__c/fields/Impact_2023__c.field-meta.xml
<CustomField>
    <fullName>Impact_2023__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up from a session to an attendee</description>
    <inlineHelpText>Look up from a session to an attendee</inlineHelpText>
    <label>Impact 2023</label>
    <referenceTo>Impact_2023__c</referenceTo>
    <relationshipLabel>Impact 2023 Sessions</relationshipLabel>
    <relationshipName>Impact_2023_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>