force-app/main/default/objects/Impact_2023_Session__c/fields/Impact_2023_Sessions_Type__c.field-meta.xml
<CustomField>
    <fullName>Impact_2023_Sessions_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Session detail information.</description>
    <inlineHelpText>Session detail information.</inlineHelpText>
    <label>Impact 2023 Sessions Type</label>
    <referenceTo>Impact_2023_Sessions_Type__c</referenceTo>
    <relationshipLabel>Impact 2023 Sessions</relationshipLabel>
    <relationshipName>Impact_2023_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>