force-app/main/default/objects/Impact_2023_Session__c/fields/Session_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Session_Presenter__c</fullName>
    <formula>Impact_2023_Sessions_Type__r.Impact_2023_Presenter__r.Name</formula>
    <label>Session Presenter</label>
    <type>Text</type>
</CustomField>