force-app/main/default/objects/Impact_2023_Session__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <description>Title of the Session</description>
    <formula>Impact_2023_Sessions_Type__r.Session_Title__c</formula>
    <inlineHelpText>Title of the Session</inlineHelpText>
    <label>Session Title</label>
    <type>Text</type>
</CustomField>